css/charts.css
.link {
    stroke: #6e6e6e;
    fill: none;
    stroke-width: 1;
}

.node circle {
    fill: #555555;
    cursor: pointer;
}

.node-collapsed circle {
    fill: #006cb4;
}

.node-normalized circle {
    r: 3;
}

.nodeLabel  {
    /* Makes the text much easier to read */
    text-shadow: 
    -1px -1px 3px white,
    -1px  1px 3px white,
    1px -1px 3px white,
    1px  1px 3px white;
    -moz-user-select: none;
    user-select: none;
    pointer-events: none;
}

.tooltip {
    position: absolute;
    text-align: center;
    width: auto;
    height: auto;
    padding: 2px;
    font: 12px sans-serif;
    background: lightsteelblue;
    border: 0px;
    border-radius: 8px;
    pointer-events: none;
}

.pop-up {
	position: absolute;
	display: none;
	background-color: #f2f2f2;
	border-radius: 4px;

	font-family: Arial, sans-serif;
    font-size: 14px;
    width: 200px;
    height: 200px;
	border: 1px solid #d4d4d4;

	z-index:1200;
}

